--- a/package.json
+++ b/package.json
@@ -12,18 +12,35 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.11",
-    "@sveltejs/kit": "1.0.0-next.278",
+    "@sveltejs/adapter-cloudflare": "^1.0.0-next.17",
+    "@sveltejs/kit": "1.0.0-next.304",
+    "@types/cookie": "^0.4.1",
+    "@types/js-cookie": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
-    "eslint": "^7.32.0",
+    "autoprefixer": "^10.4.2",
+    "cookie": "^0.4.2",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "prettier": "^2.5.1",
+    "eslint": "^7.32.0",
+    "fs-extra": "^10.0.1",
+    "js-cookie": "^3.0.1",
+    "mdsvex": "^0.10.5",
+    "parse-md": "^3.0.3",
+    "postcss-mixins": "^9.0.2",
+    "postcss-nested": "^5.0.6",
+    "postcss": "^8.4.6",
     "prettier-plugin-svelte": "^2.5.0",
-    "svelte": "^3.44.0",
-    "svelte-check": "^2.2.6",
-    "svelte-preprocess": "^4.10.1",
+    "prettier": "^2.5.1",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.0.1",
+    "remark-abbr": "^1.4.1",
+    "remark-containers": "^1.2.0",
+    "remark-github": "^11.2.2",
+    "svelte-check": "^2.4.6",
+    "svelte-preprocess": "^4.10.3",
+    "svelte": "^3.46.6",
+    "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
