--- a/package.json
+++ b/package.json
@@ -20,27 +20,28 @@
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
     "cookie": "^0.4.2",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-svelte3": "^3.2.1",
-    "eslint": "^7.32.0",
     "fs-extra": "^10.0.1",
     "js-cookie": "^3.0.1",
     "mdsvex": "^0.10.5",
     "parse-md": "^3.0.3",
+    "postcss": "^8.4.6",
     "postcss-mixins": "^9.0.2",
     "postcss-nested": "^5.0.6",
-    "postcss": "^8.4.6",
-    "prettier-plugin-svelte": "^2.5.0",
     "prettier": "^2.5.1",
+    "prettier-plugin-svelte": "^2.5.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "remark-abbr": "^1.4.1",
     "remark-containers": "^1.2.0",
     "remark-github": "^11.2.2",
+    "svelte": "^3.46.6",
     "svelte-check": "^2.4.6",
     "svelte-preprocess": "^4.10.3",
-    "svelte": "^3.46.6",
     "tailwindcss": "^3.0.23",
+    "toucan-js": "^2.5.0",
     "tslib": "^2.3.1",
     "typescript": "~4.5.4"
   },
