--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-cloudflare": "^1.0.0-next.17",
-    "@sveltejs/kit": "1.0.0-next.304",
+    "@sveltejs/kit": "1.0.0-next.308",
     "@types/cookie": "^0.4.1",
     "@types/js-cookie": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -25,6 +25,7 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "fs-extra": "^10.0.1",
     "js-cookie": "^3.0.1",
+    "marked": "^4.0.13",
     "mdsvex": "^0.10.5",
     "parse-md": "^3.0.3",
     "postcss": "^8.4.6",
@@ -35,7 +36,6 @@
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "remark-abbr": "^1.4.1",
-    "remark-containers": "^1.2.0",
     "remark-github": "^11.2.2",
     "svelte": "^3.46.6",
     "svelte-check": "^2.4.6",
