--- a/package.json
+++ b/package.json
@@ -2,48 +2,54 @@
   "name": "pzuraq.com",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-    "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "npm run test:integration && npm run test:unit",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
+    "test:integration": "playwright test",
+    "test:unit": "vitest"
   },
   "devDependencies": {
-    "@sveltejs/adapter-cloudflare": "^1.0.0-next.17",
-    "@sveltejs/kit": "1.0.0-next.308",
-    "@types/cookie": "^0.4.1",
+    "@playwright/test": "^1.28.1",
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/cookie": "^0.6.0",
+    "@types/fs-extra": "^11.0.4",
     "@types/js-cookie": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^5.10.1",
-    "@typescript-eslint/parser": "^5.10.1",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "autoprefixer": "^10.4.2",
-    "cookie": "^0.4.2",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-svelte3": "^3.2.1",
-    "fs-extra": "^10.0.1",
+    "cookie": "^0.6.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.35.1",
+    "fs-extra": "^11.2.0",
     "js-cookie": "^3.0.1",
-    "marked": "^4.0.13",
-    "mdsvex": "^0.10.5",
+    "marked": "^11.2.0",
+    "mdsvex": "^0.11.0",
     "parse-md": "^3.0.3",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.33",
     "postcss-mixins": "^9.0.2",
-    "postcss-nested": "^5.0.6",
-    "prettier": "^2.5.1",
-    "prettier-plugin-svelte": "^2.5.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-slug": "^5.0.1",
+    "postcss-nested": "^6.0.1",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-slug": "^6.0.0",
     "remark-abbr": "^1.4.1",
-    "remark-github": "^11.2.2",
-    "svelte": "^3.46.6",
-    "svelte-check": "^2.4.6",
-    "svelte-preprocess": "^4.10.3",
-    "tailwindcss": "^3.0.23",
-    "toucan-js": "^2.5.0",
-    "tslib": "^2.3.1",
-    "typescript": "~4.5.4"
+    "remark-github": "^12.0.0",
+    "svelte": "^4.2.7",
+    "svelte-check": "^3.6.0",
+    "tailwindcss": "^3.4.1",
+    "toucan-js": "^3.3.1",
+    "tslib": "^2.4.1",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.3",
+    "vitest": "^1.2.0"
   },
   "type": "module"
 }
